[package]
name = "vtyrec"
version = "0.1.0"
edition = "2021"

authors = ["Jackhr <jj2460596@gmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/Jackhr-arch/vtyrec"
homepage = "https://github.com/Jackhr-arch/vtyrec"
keywords = ["ttyrec", "terminal", "recorder"]
categories = ["command-line-utilities"]
description = "Vtyrec is a tty recorder.  It aims to be a rust impl of ttyrec, with extended functions, such as vhs-like script."

[patch.crates-io]
# just for some dependency update
portable-pty = { git = "https://github.com/wez/wezterm" }

[dependencies]
clap_complete = "4.5.26"
color-eyre = "0.6.3"
portable-pty = "0.8.1"
ratatui = { version = "0.29.0", default-features = false, features = [
    "crossterm",
] }
tracing = "0.1.40"
tui-term = "0.2.0"

[dependencies.tokio]
version = "1.40.0"
features = ["rt", "macros", "sync", "time", "fs", "signal"]

[dependencies.tokio-stream]
version = "0.1.16"
features = ["sync", "signal", "io-util"]

[dependencies.ttyrec]
version = "0.4.0"
features = ["async"]

[dependencies.clap]
version = "4.5.17"
default-features = false
features = ["color", "help", "usage", "suggestions", "derive"]

[dependencies.crossterm]
version = "0.28.1"
default-features = false
features = ["events", "event-stream"]
